--- a/chromplug/popup.html
+++ b/chromplug/popup.html
@@ -1,27 +1,31 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="UTF-8">
-<style>
-* {
-    margin: 0;
-    padding: 0;
-}
+    <meta charset="UTF-8">
+    <script type="text/javascript" src="js/jquery-3.1.1.slim.min.js"></script>
+    <script src="js/mate9.js"></script>
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+        }
 
-body {
-    width: 200px;
-    height: 100px;
-}
-
-div {
-    line-height: 100px;
-    font-size: 42px;
-    text-align: center;
-}
-</style>
+        body {
+            width: 500px;
+            margin: 5px;
+            padding: 0px;
+        }
+        button
+        {
+            margin-bottom: 10px;
+            margin-right: 10px;
+            float:right;
+        }
+    </style>
 </head>
 <body>
-<div id="clock_div"></div>
-<script src="js/mate9.js"></script>
+<div id="order_div"></div>
+<div id="cookie_div"></div>
+<button id="tjdd">提交订单</button>
 </body>
 </html>
